k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-api
  namespace: mi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mi-api
  template:
    metadata:
      labels:
        app: mi-api
    spec:
      containers:
        - name: mi-api
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
